--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -27,29 +27,15 @@
             <div class="subcontenedor">
               <!--Titulación-->   
               <div class="bloque activo" id="bloquePreguntasFrecuentesTitulacion">
-                <div class="card border-0 py-3 px-3" id="Preguntasprueba" >
                   <h4><b>Preguntas frecuentes titulacion</b></h4></br>
-                  
 
-                  <h6><b>¿Se puede solicitar un certificado total con sin servicio social?</b></h6>
+
+                  <div class="pf card border-0 py-3 px-3" id="spsuctsss" >
+
+                  <h6><b>¿Se puede solicitar un certificado total sin servicio social?</b></h6>
                   <a>
                     Es posible siempre y cuando cuente con los requisitos correspondientes para solicitarlo, el tiempo del trámite es el mismo.
                   </a>
-
-                </br></br>
-
-                  <h6><b>¿Se puede solicitar un certificado total con sin servicio social?</b></h6>
-                  <a>
-                    Es posible siempre y cuando cuente con los requisitos correspondientes para solicitarlo, el tiempo del trámite es el mismo.
-                  </a>
-
-                </br></br>
-
-                  <h6><b>¿Se puede solicitar un certificado total con sin servicio social?</b></h6>
-                  <a>
-                    Es posible siempre y cuando cuente con los requisitos correspondientes para solicitarlo, el tiempo del trámite es el mismo.
-                  </a>
-
 
                 </div>
               </div>
@@ -303,38 +289,24 @@
               <!--ControlDocumental-->   
               <div class="bloque" id="bloquePreguntasFrecuentesControlDocumental">
                 <div class="card border-0 py-3 px-3" id="Preguntasprueba" >
-
-                  <div class="pf card py-3 px-3 b-5 justify-content-center ">
-                    <h4><b>Preguntas frecuentes Recolección de documentos</b></h4></br>
                   
-
+                  <div class="pf card border-0 py-3 px-3" id="qhssiucd" >
+                    
                     <h6><b>¿Qué hacer si se identifica un CURP duplicado?</b></h6>
                     <a>
-                      
-                      Lo primero que se tiene que identificar es si ya se realizó una unificación ante RENAPO, en caso de que no, brindarle 
-                      instrucciones al alumno para realizar el proceso y obtener la CURP con la leyenda de curp unificado.<br/><br/>
-  
-                    <img src="Img/Buscador/Curp_unificado.png" alt=""><br/><br/>
-                      En caso de que el alumno realice este trámite posterior a la titulación es necesario realizar la corrección de sus 
-                      documentos ya que no podrá tramitar su Cédula en la plataforma de la SEPLo primero que se tiene que identificar es si ya 
-                      se realizo 
-                    </a>             
+                        
+                        Lo primero que se tiene que identificar es si ya se realizó una unificación ante RENAPO, en caso de que no, brindarle 
+                        instrucciones al alumno para realizar el proceso y obtener la CURP con la leyenda de curp unificado.<br/><br/>
+    
+                        <img src="img/busqueda/curp.png" alt=""><br/><br/>
 
-                </div>
+                        En caso de que el alumno realice este trámite posterior a la titulación es necesario realizar la corrección de sus 
+                        documentos ya que no podrá tramitar su Cédula en la plataforma de la SEP, Lo primero que se tiene que identificar es si ya 
+                        se realizo 
+                      </a>    
 
-                <br/><br/>
-                
-                <h6><b>¿Se puede solicitar un certificado total con sin servicio social?</b></h6>
-                <a>
-                  Es posible siempre y cuando cuente con los requisitos correspondientes para solicitarlo, el tiempo del trámite es el mismo.
-                </a>
+                  </div>
 
-              </br></br>
-
-                <h6><b>¿Se puede solicitar un certificado total con sin servicio social?</b></h6>
-                <a>
-                  Es posible siempre y cuando cuente con los requisitos correspondientes para solicitarlo, el tiempo del trámite es el mismo.
-                </a>
               </div>
                 
                 
