--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -425,7 +425,7 @@
 
               <div class="row">
                 <div class="col col-md-6">
-                  <img src="img/titulacion/rg.png" alt="">
+                  <img class="d-block w-100" src="img/titulacion/rg.png" alt="">
                 </div>
               </div>
               
