--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -688,13 +688,13 @@
                   </div>
                 </div>
 
-                <!--Documentos Diplomados.-->
+                <!--Documentos Alianzas-->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="panelsStayOpen-headingDiplo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#panelsStayOpen-collapseDiplo" aria-expanded="false"
                       aria-controls="panelsStayOpen-collapseDiplo">
-                      Documentación para diplomados.
+                      Documentación para Alianzas
                     </button>
                   </h2>
                   <div id="panelsStayOpen-collapseDiplo" class="accordion-collapse collapse"
@@ -703,13 +703,8 @@
                       <div class="row">
                         <div class="col">
 
-                          <strong>Documentación para Diplomados:</strong> </br></br>
-                          -CURP</br>
-                          -Acta de nacimiento</br>
-                          -Carta compromiso y anexo de datos y costos</br>
-                          -Antecedentesacadémicos</br>
-                          -Identificación oficial</br>
-                          -Comprobante de domicilio</br>
+                          <strong>Documentación para Alianzas:</strong> </br></br>
+                       
                         </div>
 
                         <div class="col">
