--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -256,7 +256,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Superintendencia Nacional de Educación Superior Universitaria (SUNEDU)</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: NO</br> 
+                <b>Apostilla certificada</b>: NO</br> 
                 <b>Certificado de programa académico -CPA</b>: En caso SUNEDU lo exija</br> 
                 <a href="https://www.sunedu.gob.pe/presentar-solicitud-reconocimiento-grados-titulos-forma-virtual/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -269,7 +269,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación Nacional</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
                 <a href="https://www.mineducacion.gov.co/1759/w3-article-350670.html?_noredirect=1" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -282,7 +282,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Universidad de Chile</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
                 <a href="https://uchile.cl/presentacion/relaciones-internacionales/revalidacion-de-titulos-extranjeros/revalidacion-y-reconocimiento-en-la-universidad-de-chile" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -295,7 +295,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Secretaría de Educación Superior, Ciencia, Tecnología e Innovación (SENESCYT)</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
                 <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -308,7 +308,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación Ciencia y Tecnología (Mescyt) Universidad Autónoma de Santo Domingo (UASD)</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI </br> 
                 <a href="https://mescyt.gob.do/servicios/documentos-extranjeros/ https://uasd.edu.do/index.php/2018-01-23-20-50-42/revalida-o-reconocimiento-de-título" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -321,7 +321,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Universidades Autónomas Bolivianas y CEUB (para programas que no existan en Bolivia)</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: NO</br> 
                 <a href="http://www.ceub.edu.bo/academica/documentos/normas/04_Reglamento_Titulos_y_Grados.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -334,7 +334,7 @@
               <p class="card-text">
                 <b>Entidad</b>: cada universidad nacional cuenta con un apartado en su web, o en su defecto en sus oficinas presenciales.</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
                 <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -347,7 +347,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
                 <a href="https://www.mined.gob.sv/servicios/incorporacion-de-titulos-de-educacion-superior-procedentes-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -360,7 +360,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Universidad San Carlos de Guatemala</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: De requerirse</br> 
+                <b>Apostilla certificada</b>: De requerirse</br> 
                 <b>Certificado de programa académico -CPA</b>: De requerirse</br> 
                 <a href="https://portalregistro.usac.edu.gt/formulario_incorporado" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -373,7 +373,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación y Ciencia (MEC)</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
                 <a href="http://www.cones.gov.py/nuevo-formulario-de-reconocimiento-de-titulos-extranjeros-con-importantes-ajustes-del-cones/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -386,7 +386,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Universidad de Panamá</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
                 <a href="https://www.panamatramita.gob.pa/es/tramite/solicitud-de-homologaci%C3%B3n-de-t%C3%ADtulos#:~:text=Homologar%20los%20t%C3%ADtulos%20de%20post,puedan%20tener%20validez%20en%20Panam%C3%A1.&text=Carta%20de%20solicitud%20en%20papel,y%20cualquier%20otra%20informaci%C3%B3n%20pertinente." class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -399,7 +399,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación y Cultura - Dirección Nacional de Educación</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>:</br> 
+                <b>Apostilla certificada</b>:</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
                 <a href="https://www.gub.uy/tramites/solicitud-reconocimientos-revalidas-titulos-terciarios" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -412,7 +412,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Universidad Nacional Autónoma de Honduras</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
                 <a href="https://des.unah.edu.hn/servicio-al-usuario/tramites/validar-estudios-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -425,7 +425,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Universidades Estatales, reconocimiento.  Universidad Nacional Autonoma de Nicaragua, incorporación y al ser estatal, reconocimiento</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>:</br> 
+                <b>Apostilla certificada</b>:</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
                 <a href="https://www.unan.edu.ni/wp-content/uploads/2019/03/unan-managua-reglamento-reconocimiento-incorporacion-profesionales-nicaragua.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -438,7 +438,7 @@
               <p class="card-text">
                 <b>Entidad</b>: "-CONARE (Consejo Nacional de Rectores) -Universidades miembros del Consejo Nacional de Rectores "</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: SI</br> 
+                <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
                 <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
@@ -451,7 +451,7 @@
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Universidades</br>
                 <b>Apostilla título</b>: SI</br> 
-                <b>Apostilla certificado</b>: </br> 
+                <b>Apostilla certificada</b>: </br> 
                 <b>Certificado de programa académico -CPA</b>: Si</br> 
                 <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
               </p>
