--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -34,10 +34,59 @@
 
                   <h6><b>¿Se puede solicitar un certificado total sin servicio social?</b></h6>
                   <a>
-                    Es posible siempre y cuando cuente con los requisitos correspondientes para solicitarlo, el tiempo del trámite es el mismo.
+                    Se puede trabajar el certificado total siempre y cuando cumpla con:
+                    <br/><br/>
+                    -Documentación entregada.<br/>
+                    -Pago de titulación cubierto.<br/>
+                    -Avance curricular y estatus de egresado.
+                    <br/><br/>
+                    El tramite de titulación quedara pausado hasta la liberación de servicio social, posteriormente se tiene que comunicar para solicitar seguimiento.
+
                   </a>
 
-                </div>
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="ctdetdt" >
+
+                  <h6><b>¿Cuanto tiempo dura el tramite de titulación?</b></h6>
+                  <a>
+                    El trámite dura un estimado de 8 meses, a veces se puede extender por situaciones tanto internas como externas, hay que tener presente que los tiempos son estimados.
+                  </a>
+
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="qdenpetdt" >
+
+                  <h6><b>¿Qué documentación es necesaria para el trámite de titulación?</b></h6>
+                  <a>
+                    Lo ideal es que el alumno tenga toda la documentación completa, no obstante, la documentación obligatoria es:
+                    <br/><br/>
+                    Antecedentes académicos (Certificado de estudios). <br/>
+                    Título (maestrías y doctorados). <br/>
+                    Acta de nacimiento. <br/>
+                    CURP.
+
+                  </a>
+
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="ceecdpdt" >
+
+                  <h6><b>¿Cuál es el costo del pago de titulación?</b></h6>
+                  <a>
+                    El pago de titulación tiene un costo de 15,000.00 pesos mexicanos en plataforma, hay ocasiones en que el costo puede cambiar por alguna promoción o bien se tiene incluido.
+                  </a>
+
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="qhsuanqrtdmam" >
+
+                  <h6><b>¿Qué hacer si un alumno no quiere realizar trámite de máster a maestría?</b></h6>
+                  <a>
+                    Únicamente se le puede proporcionar un diploma de máster, para la obtención de cédula y titulo es necesario solicitar el cambio.
+                  </a>
+
+                  </div>
               </div>
 
               <!--ServicioSocial-->   
@@ -304,6 +353,24 @@
                         documentos ya que no podrá tramitar su Cédula en la plataforma de la SEP, Lo primero que se tiene que identificar es si ya 
                         se realizo 
                       </a>    
+
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="" >
+                    
+                    <h6><b>¿Qué es una dictaminación de un documento?</b></h6>
+                    <a>
+                        Formalmente es el documento escrito que acredita y justifica el cumplimiento de un requisito de trámite procesal legislativo.
+                    </a>    
+
+                  </div>
+
+                  <div class="pf card border-0 py-3 px-3" id="" >
+                    
+                    <h6><b>  </b></h6>
+                    <a>
+                        
+                    </a>    
 
                   </div>
 
